k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: 600627355881.dkr.ecr.ap-south-1.amazonaws.com/valerix/frontend:latest
                  ports:
                      - containerPort: 80
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 80
                      initialDelaySeconds: 20
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 80
                      initialDelaySeconds: 10
                      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
spec:
    type: ClusterIP
    selector:
        app: frontend
    ports:
        - port: 80
          targetPort: 80
