k8s/inventory-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
spec:
  type: ClusterIP
  selector:
    app: inventory-db
  ports:
    - port: 5432
