k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: inventory-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: inventory-service
    template:
        metadata:
            labels:
                app: inventory-service
        spec:
            containers:
                - name: inventory-service
                  image: 600627355881.dkr.ecr.ap-south-1.amazonaws.com/valerix/inventory-service:latest
                  ports:
                      - containerPort: 3002

                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 3002
                      initialDelaySeconds: 20
                      periodSeconds: 10

                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 3002
                      initialDelaySeconds: 10
                      periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
    name: inventory-service
spec:
    type: ClusterIP
    selector:
        app: inventory-service
    ports:
        - port: 3002
          targetPort: 3002
