k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: order-service
    template:
        metadata:
            labels:
                app: order-service
        spec:
            containers:
                - name: order-service
                  image: 600627355881.dkr.ecr.ap-south-1.amazonaws.com/valerix/order-service:latest
                  ports:
                      - containerPort: 3001

                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 3001
                      initialDelaySeconds: 20
                      periodSeconds: 10

                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 3001
                      initialDelaySeconds: 10
                      periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
    name: order-service
spec:
    type: ClusterIP
    selector:
        app: order-service
    ports:
        - port: 3001
          targetPort: 3001
