k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frostbyte-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: network-service
                            port:
                                number: 80
